--- a/index.css
+++ b/index.css
@@ -13,9 +13,20 @@ main {
     margin-left: auto;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 5;
-    grid-template-rows: 2;
-    border: 2px black ;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.game-box {
+    transform: scale(1.0);
+    transition-duration: 0.15s;
+    transition-timing-function: ease-in-out;
+}
+
+.game-box:hover {
+    transform: scale(1.05);
+    transition-duration: 0.15s;
+    transition-timing-function: ease-in-out;
 }
